src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__write_to_parent_variable.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

%0 = type { %cls2 }
%cls = type { i16, i16 }
%cls2 = type { %cls }
%__fat_pointer_to_cls2 = type { %cls2*, [0 x i64]* }
%__fat_pointer_to_cls = type { %cls*, [0 x i64]* }

@__cls__init = unnamed_addr constant %cls zeroinitializer
@__cls2__init = unnamed_addr constant %cls2 zeroinitializer
@____init = unnamed_addr constant %0 zeroinitializer
@____fat_pointer_to_cls2__init = unnamed_addr constant %__fat_pointer_to_cls2 zeroinitializer
@____fat_pointer_to_cls__init = unnamed_addr constant %__fat_pointer_to_cls zeroinitializer

define void @cls(%cls* %0) {
entry:
  %x = getelementptr inbounds %cls, %cls* %0, i32 0, i32 0
  %y = getelementptr inbounds %cls, %cls* %0, i32 0, i32 1
  ret void
}

define void @cls2(%cls2* %0) {
entry:
  %__super__ = getelementptr inbounds %cls2, %cls2* %0, i32 0, i32 0
  %x = getelementptr inbounds %cls, %cls* %__super__, i32 0, i32 0
  %y = getelementptr inbounds %cls, %cls* %__super__, i32 0, i32 1
  ret void
}

define void @0(%0* %0) {
entry:
  %myClass = getelementptr inbounds %0, %0* %0, i32 0, i32 0
  %1 = getelementptr inbounds %cls2, %cls2* %myClass, i32 0, i32 0
  %x = getelementptr inbounds %cls, %cls* %1, i32 0, i32 0
  %load_ = load i16, i16* %x, align 2
  %2 = sext i16 %load_ to i32
  %tmpVar = icmp eq i32 %2, 1
  ret void
}

